[gd_scene load_steps=4 format=2]

[ext_resource path="res://main_theme.tres" type="Theme" id=1]
[ext_resource path="res://gameplay/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://font/Symbola24.tres" type="DynamicFont" id=3]

[node name="PauseMenu" type="PanelContainer"]
pause_mode = 2
margin_right = 182.0
margin_bottom = 231.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 166.0
margin_bottom = 217.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 150.0
margin_bottom = 33.0
text = "BAIACU"
align = 1

[node name="HSeparator1" type="HSeparator" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 150.0
margin_bottom = 53.0

[node name="MuteButton" type="Button" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 150.0
margin_bottom = 110.0
toggle_mode = true
text = "ðŸ”Š"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 150.0
margin_bottom = 130.0

[node name="Authors" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 150.0
margin_bottom = 201.0
rect_min_size = Vector2( 150, 55 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "ðŸŽ¨ [url=https://elsenyh.itch.io]Elsenyh[/url]
âŒ¨ðŸŽ¤ [url=https://gilzoide.itch.io/]gilzoide[/url]"
text = "ðŸŽ¨ Elsenyh
âŒ¨ðŸŽ¤ gilzoide"
scroll_active = false

[connection signal="toggled" from="VBoxContainer/MuteButton" to="." method="_on_MuteButton_toggled"]
[connection signal="meta_clicked" from="VBoxContainer/Authors" to="." method="_on_meta_clicked"]
